Fix spacing for annotator top panel.

--- a/src/collaborative_platform/apps/close_reading/static/close_reading/css/main.css
+++ b/src/collaborative_platform/apps/close_reading/static/close_reading/css/main.css
@@ -5,12 +5,12 @@ button span, #alert{
 #versionLink{font-size: 0.5em;}
 
 #editor{
-    margin-top: 195px;
+    margin-top: 155px;
     line-height: 2.3em;
 }
 
 #editor.lowered{
-    margin-top: 235px;
+    margin-top: 195px;
 }
 
 /*#annotator-root{max-width: 23.7cm;}*/
